Updated Readme and started Review Paper

--- a/My_Notes/Radial_Currents_Appendix.html
+++ b/My_Notes/Radial_Currents_Appendix.html
@@ -79,8 +79,43 @@ x \,=\, \frac{r - r_0}{l}, ~~~\text{and}~~~ l \,=\, \sqrt{\frac{\mu_i \epsilon_0
 <p>As <span class="math">\(\nabla p\)</span> increases, a spontaneous sharp transition takes place when the collision frequency is small and squeezing of the banana orbit is strong.</p>
 <p>The radial electric field is negative when <span class="math">\(I = 0\)</span>. When there is current in the electrode, it acts like a <span class="math">\(\nabla p\)</span>. The threshold for transition by electrode biasing changes in accordance with <span class="math">\(\nabla p\)</span>.</p>
 <ul>
-<li><span class="math">\[g(X,y,x) \,=\, g_0(X,y) \, \exp\left[\left(-\frac{x - d}{\rho_p}\right)^2\right]\]</span></li>
+<li><p>Previously, we assumed the ambipolar radial electric field term to be constant in space, so the DE had translational invariance in space. In reality, there is spatial variation in the plasma parameter that affect the structure of the radial electric field <strong>through</strong> the ambipolar radial electric field.</p></li>
+<li><p>Also, the magnitude of the orbit loss terms depends on the spatial position (assume a simple form of exponential decay): <span class="math">\[g(X,y,x) \,=\, g_0(X,y) \, \exp\left[\left(-\frac{x - d}{\rho_p}\right)^2\right]\]</span></p></li>
+<li><p>These (?) terms cause the nonlinear terms in the DE to vary in space, which produce other scale lengths.</p>
+<ul>
+<li>Fig. 4 shows the spatial profiles of the field with nonuniform ion density. Peaks of the field tend to shift to the larger density gradient region for positive biasing.</li>
+</ul></li>
+<li><p>We introduce a spatial dependency on the ambipolar field: <span class="math">\[X_a \,=\, -\frac{p}{2d}(x + d)\]</span></p>
+<ul>
+<li><p>The ambipolar field varies linearly from zero at the electrode to <span class="math">\(p\)</span> at the position of the limiter, with <span class="math">\(p\)</span> representing the magnitude of the spatial variation of the ambipolar field.</p></li>
+<li><p>Lines a, b, and c in Figs. 4 and 5 represent the peak positions of single, double, and triple peaked structure.</p></li>
+<li><p>As <span class="math">\(p\)</span> increases, the peak of the single begins to shift outward first, and then the peaks of the double shift next. The peaks approach the outermost peak position of the triple for large values of <span class="math">\(p\)</span>.</p></li>
+<li><p>The equation <strong>without</strong> spatial variance has translational invariance, and no energy is needed for parallel movement. The shape of the structure is not sensitive to the asymmetric term, but only a small nonuniformity gives a significant change in the peak position.</p></li>
+</ul></li>
+<li><p>The selection rule (?) shows that the structure with 1 peak is formed after a transition, but this sensitivity of its position to spatial gradients indicates that the single peak appears at the peak position of the structure with the maximum number of peaks.</p>
+<ul>
+<li>The max number of available peaks is determined by the distance between the electrode and the limiter, so a measurement of the peak position gives info on the scale of the normalizing distance <span class="math">\(l\)</span> and on the viscosity <span class="math">\(\mu_i\)</span>.</li>
+</ul></li>
+<li><p>It is then discussed how the peak shift is logarithmically dependent on <span class="math">\(p\)</span>, and shows the form, in which the solution is simply a small translation <span class="math">\(\Delta x\)</span> added to the old, homogenous solution.</p></li>
+<li><p>Conclusion:</p>
+<ul>
+<li><p>They considered neoclassical bulk viscosity, ion orbit losses, anomalous transport, and electrode current to be the dominant contributors to the radial current, and the nonlinear responses of the former 2 terms to the radial electric field give various structures with multiple peaks for the same boundary condition.</p></li>
+<li><p><strong>Claim</strong>: the competition between two nonlinear terms (neoclassical bulk viscosity and ion orbit losses) explains the H-mode transition mechanism and an asymmetric bifurcation feature with respect to the electrode current term.</p></li>
+<li><p>The shape of the radial electric field structure is not sensitive to the spatially asymmetric term and the properties of the basic nonlinearity persist; however, a small spatial variation can cause a large shift of the peak position.</p></li>
+<li><p>Electrode biasing can be used to make wider and stronger transport barriers.</p></li>
+</ul></li>
 </ul>
+<hr />
+<h2 id="bulk-viscosity">3. Bulk Viscosity?</h2>
+<h3 id="notes-on-a-review-of-theories-of-the-l-h-transition-by-j.w.-connor-and-h.r.-wilson">Notes on <em>A Review of Theories of the L-H Transition</em> by J.W. Connor and H.R. Wilson</h3>
+<!-- ------------ THE ABSTRACT ------------
+
+    After a general discussion of the experimental characteristics of the L–H transition and consideration of basic theoretical principles underlying models for it, this paper reviews the various theories of the L–H transition available in the literature, providing some background information on each theory and expressing the transition criteria in forms suitable for comparison with experiment.
+    Some conclusions on the relevance of these models for explaining the experimental data on the transition are drawn.
+
+-->
+
+
 <hr />
 </body>
 </html>
