Fixed typos in Bif thesis and added gitignore

--- a/My_Notes/Review_theories.html
+++ b/My_Notes/Review_theories.html
@@ -163,6 +163,76 @@
 <td><span class="math display">\[\hat{\nu}_{e*} &lt; 0.39 \frac{q}{s\epsilon_n} \frac{k_y a}{\rho_s (a\Delta^\prime)^2} \sqrt{\frac{m_i}{m_e}} \frac{Z\beta^2 \tau^{7/2}}{(1 + \tau)^2}\]</span></td>
 <td><span class="math display">\[C = 0.27 \left[\frac{s\epsilon_n}{\epsilon Z}\right]^{2/7} \left[\frac{(a\Delta^{\prime})^2}{k_y a}\right]^{2/7} \tau^{-3/7}, ~~ \alpha = -2/7, ~~ \alpha = 6/7\]</span></td>
 </tr>
+<tr class="odd">
+<td>Finite <span class="math inline">\(\beta\)</span> effects on collisional drift wave turbulence by Scott et al.</td>
+<td><span class="math display">\[\beta &gt; \frac{m_e}{m_i}\]</span></td>
+<td><span class="math display">\[C 0.135 \frac{\tau}{(1 + \tau)} \frac{1}{A_i}, ~~ \alpha_n = -1, ~~ \alpha_B = 2\]</span></td>
+</tr>
+<tr class="even">
+<td>Drift-Alfvén turbulence, <span class="math inline">\(k_\parallel \sim 1 / (R q)\)</span>, <span class="math inline">\(L_p \sim \Delta_{SOL}\)</span></td>
+<td><span class="math display">\[\sqrt{\frac{m_i}{2 m_e}} \frac{\beta q}{\epsilon_p} &gt; 1 + \left[\hat{\nu}_{*e}^2 \sqrt{\frac{2 m_i}{m_e} \frac{\epsilon_p}{q}}\right]^{1/3}\]</span></td>
+<td><span class="math display">\[\text{Collisionless:} ~~~ C \sim \frac{1}{(R q)^{4/5}} \frac{1}{A_i^{3/5}}, ~~ \alpha_n = -7/5, ~~ \alpha_B = 2 \\ \text{Collisional:} ~~~ C \sim \frac{(R q)^{2/15}}{A_i^{1/15}}, ~~ \alpha_n = 1 /15, ~~ \alpha_B = 2/5\]</span></td>
+</tr>
+<tr class="odd">
+<td>Drift wave instabilities driven by neutrals by Rogister</td>
+<td><span class="math display">\[\rho_{*s} \propto \sqrt{\frac{\ell}{a \hat{\nu}_{e}}}\]</span></td>
+<td><span class="math display">\[C \propto \frac{A_i q}{\epsilon}, ~~ \alpha_n = 2, ~~ \alpha_B = -2\]</span></td>
+</tr>
+<tr class="even">
+<td>Resistive interchange SOL instability, ion-orbit-loss viscocity by Pogutse et al.</td>
+<td><span class="math display">\[\rho_{*s} &gt; 10 \sqrt{\frac{m_i}{m_e}} \frac{\Delta_{SOL}^2}{R^2 q \epsilon^{3/2}} \tau\]</span></td>
+<td><span class="math display">\[C = 1.76\times 10^{10} \frac{\tau^2 \Delta_{SOL}^4}{R^2 \epsilon q^2}, ~~ \alpha_n 0, ~~ \alpha_B = 2\]</span></td>
+</tr>
+<tr class="odd">
+<td>Resistive interchange SOL instability, sheath resistivity dominates by Pogutse et al.</td>
+<td><span class="math display">\[\rho_{*s} &gt; \frac{31.6}{\epsilon} \left(\frac{\Delta_{SOL}}{R}\right)^{3/2}\]</span></td>
+<td><span class="math display">\[C = 9.58\times 10^7 \frac{\Delta_{SOL}^3}{R A_i}, ~~ \alpha_n =0, ~~ \alpha_B = 2\]</span></td>
+</tr>
+<tr class="even">
+<td>Resistive MHD, drift/interchange SOL turbulence by Cordey et al.</td>
+<td><span class="math display">\[\rho_{*s} &gt; C_1 \frac{\Delta_{SOL}}{\epsilon R}\]</span></td>
+<td><span class="math display">\[C \propto \frac{\Delta_{SOL}^2}{a_i}, ~~ \alpha_n = 0, \alpha_B = 2\]</span></td>
+</tr>
+<tr class="odd">
+<td>Electron temperature gradient modes in SOL, incorporating self-consistent calculation of <span class="math inline">\(\epsilon T_e\)</span>, by Cohen an Xu</td>
+<td><span class="math display">\[\beta &gt; \beta_c \propto \rho_{*s}^{2/5} \left(\frac{a}{L_\parallel}\right)^{2/5} \frac{\tau^{2/15}}{A_i^{1/10}}\]</span></td>
+<td><span class="math display">\[C \propto \frac{\tau^{17/12}}{(1 + \tau)^{5/4}} \sqrt{\frac{1}{L_\parallel}} A_i^{1/8}, ~~ \alpha_n = -4/5, ~~ \alpha_B = 2\]</span></td>
+</tr>
+<tr class="even">
+<td>Resistive skin effect reduces turbulence length scales in SOL, by Chankin</td>
+<td><span class="math inline">\($\)</span>$</td>
+<td><span class="math inline">\($\)</span>$</td>
+</tr>
+<tr class="odd">
+<td>Ion-orbit-loss torque balancing neoclassical poloidal viscous damping, by Shaing and Crume</td>
+<td><span class="math inline">\($\)</span>$</td>
+<td><span class="math inline">\($\)</span>$</td>
+</tr>
+<tr class="even">
+<td>Ion-orbit-loss, non-ambipolar electron diffusion, by Itoh and Itoh</td>
+<td><span class="math inline">\($\)</span>$</td>
+<td><span class="math inline">\($\)</span>$</td>
+</tr>
+<tr class="odd">
+<td>More fundamental condition on ion-orbit loss by Ohkawa and Hinton</td>
+<td><span class="math inline">\($\)</span>$</td>
+<td><span class="math inline">\($\)</span>$</td>
+</tr>
+<tr class="even">
+<td></td>
+<td><span class="math inline">\($\)</span>$</td>
+<td><span class="math inline">\($\)</span>$</td>
+</tr>
+<tr class="odd">
+<td></td>
+<td><span class="math inline">\($\)</span>$</td>
+<td><span class="math inline">\($\)</span>$</td>
+</tr>
+<tr class="even">
+<td></td>
+<td><span class="math inline">\($\)</span>$</td>
+<td><span class="math inline">\($\)</span>$</td>
+</tr>
 </tbody>
 </table>
 </body>
