--- a/My_Notes/Review_theories.html
+++ b/My_Notes/Review_theories.html
@@ -28,7 +28,7 @@
 <li><p>In terms of local plasma parameters, hysteresis is less obvious, but the critical temperature responds to the ion-<span class="math inline">\(\nabla B\)</span> drift in the same manner as <span class="math inline">\(P_h\)</span>.</p></li>
 </ul></li>
 </ul>
-<h4 id="ii-spatial-and-temporal-characteristics">(ii) Spatial and temporal characteristics</h4>
+<h4 id="ii-spatial-and-temporal-characteristics">(ii) <em>Spatial and temporal characteristics</em></h4>
 <ul>
 <li><p>How the edge region scales is a potential test of theories.</p>
 <ul>
@@ -65,7 +65,7 @@
 <li><p>Some assumptions are needed for the perp and parallel heat transport in the SOL: give estimates when perp transport is either Bohm or gyro-Bohm and when parallel transport is dominated by either collisional diffusion or by flow at sound speed.</p></li>
 <li><p>Balance perp and parallel heat flows in the SOL give: <span class="math display">\[\Delta(SOL) \sim \sqrt{\frac{n T \chi_\perp R q}{q_\parallel}}\]</span></p></li>
 </ul></li>
-<li><p>The results of taking each assumption is given by Eqs. 2.24 through 2.27.</p></li>
+<li><p>The results of taking each assumption is given by Eqs. (2.24) through (2.27).</p></li>
 </ul>
 <h3 id="the-shear-flow-paradigm">2.3 <em>The shear flow paradigm</em></h3>
 <ul>
@@ -81,10 +81,10 @@
 <li><span class="math inline">\(\tau_c\)</span> is the turbulent decorrelation time, which can be considered on the order of the inverse of the diamagnetic frequency.</li>
 </ul></li>
 </ul></li>
-<li><p>A more complete expression for <span class="math inline">\(\omega_s\)</span> is shown in Eq. 2.31, where <span class="math inline">\(\Delta \phi\)</span> and <span class="math inline">\(\Delta \eta\)</span> are correlation angles for the turbulence around the torus and along the field line, respectively: <span class="math display">\[\omega_s^2 \,=\, (\Delta r)^2 \left[\frac{1}{(\Delta \phi)^2} \left(\frac{\partial}{\partial r} \left(\frac{q V_e}{r}\right)\right)^2 + \frac{1}{(\Delta \eta)^2}\left(\frac{\partial}{\partial r} \left(\frac{V_\parallel}{q R}\right)\right)^2\right]\]</span></p>
+<li><p>A more complete expression for <span class="math inline">\(\omega_s\)</span> is shown in Eq. (2.31), where <span class="math inline">\(\Delta \phi\)</span> and <span class="math inline">\(\Delta \eta\)</span> are correlation angles for the turbulence around the torus and along the field line, respectively: <span class="math display">\[\omega_s^2 \,=\, (\Delta r)^2 \left[\frac{1}{(\Delta \phi)^2} \left(\frac{\partial}{\partial r} \left(\frac{q V_e}{r}\right)\right)^2 + \frac{1}{(\Delta \eta)^2}\left(\frac{\partial}{\partial r} \left(\frac{V_\parallel}{q R}\right)\right)^2\right]\]</span></p>
 <ul>
 <li><p>After some generalizations, and assuming the correlation 'lengths' and electrostatic potential <span class="math inline">\(\Phi\)</span> are constant on a flux surface, it can be reduced (the proportionality hold when <span class="math inline">\(\Delta r\)</span> and <span class="math inline">\(\Delta \theta\)</span> are fixed): <span class="math display">\[\omega_s \,=\, \frac{R^2 B_\theta^2}{r B_\phi} \left(\frac{\Delta r}{\Delta \theta}\right) \frac{\partial^2 \Phi}{\partial \psi^2} \,\propto\, R^3\]</span></p></li>
-<li><p>When turbulence is isotropic (<span class="math inline">\(\Delta r \sim r\Delta \theta\)</span>), it can be written that (Eq. 2.34): <span class="math display">\[\omega_s \,=\, \frac{RB_\theta}{B} \frac{\partial}{\partial r}\left(\frac{E_r}{RB_\theta}\right)\]</span></p></li>
+<li><p>When turbulence is isotropic (<span class="math inline">\(\Delta r \sim r\Delta \theta\)</span>), it can be written that (Eq. (2.34)): <span class="math display">\[\omega_s \,=\, \frac{RB_\theta}{B} \frac{\partial}{\partial r}\left(\frac{E_r}{RB_\theta}\right)\]</span></p></li>
 </ul></li>
 <li><p>The curvature of <span class="math inline">\(E_r\)</span> does not have a generic effect on turbulence, but can affect specific instabilities.</p></li>
 <li><p>The transport coefficients are taken to be suppressed by the presence of <span class="math inline">\(\omega_s\)</span>: <span class="math display">\[D \,=\, \frac{D_0}{1 + c\left(\frac{\omega_s}{\omega_t}\right)^\gamma}\]</span></p></li>
@@ -92,7 +92,7 @@
 </ul>
 <h3 id="radial-electric-fields">2.4 <em>Radial electric fields</em></h3>
 <ul>
-<li><p><span class="math inline">\(V_E^\prime\)</span> is determined by the radial electric field <span class="math inline">\(E_r\)</span>, which is then deduced from the radial force balance for any plasma species <span class="math inline">\(j\)</span> (Eq. 2.38): <span class="math display">\[E_r \,=\, -\frac{1}{n_j e_j} \frac{\text{d} p_j}{\text{d} r} + V_{\theta j} B_\phi - V_{\phi j} B_\theta\]</span></p>
+<li><p><span class="math inline">\(V_E^\prime\)</span> is determined by the radial electric field <span class="math inline">\(E_r\)</span>, which is then deduced from the radial force balance for any plasma species <span class="math inline">\(j\)</span> (Eq. (2.38)): <span class="math display">\[E_r \,=\, -\frac{1}{n_j e_j} \frac{\text{d} p_j}{\text{d} r} + V_{\theta j} B_\phi - V_{\phi j} B_\theta\]</span></p>
 <ul>
 <li><p><span class="math inline">\(e_j\)</span> is charge, <span class="math inline">\(p_j\)</span> is pressure, <span class="math inline">\(n_j\)</span> is density, and <span class="math inline">\(V_{\theta j}\)</span> and <span class="math inline">\(V_{\phi j}\)</span> are the poloidal and toroidal velocities.</p></li>
 <li><p>Therefore, changes in <span class="math inline">\(E_r\)</span> can be associated with changes in <span class="math inline">\(V_{\theta j}\)</span>, <span class="math inline">\(V_{\phi j}\)</span>, or <span class="math inline">\(p_j^\prime\)</span> (the prime is the radial derivative).</p></li>
@@ -103,12 +103,94 @@
 </ul></li>
 <li><p>Models involving <span class="math inline">\(V_{\phi j}\)</span> or <span class="math inline">\(p_j^\prime\)</span> depend on sources of particles (neutrals surrounding the plasma, neutral beams), energy (heating), or toroidal momentum (neutral beams) driving <span class="math inline">\(E_r^\prime\)</span> until a transport bifurcation occurs.</p></li>
 </ul></li>
-<li><p>If one balances <span class="math inline">\(\omega_s\)</span> from Eq. 2.34 using <span class="math inline">\(E_r\)</span> derived from the <span class="math inline">\(p^\prime\)</span> contribution in Eq. 2.38, then the criterion <span class="math inline">\(\omega_s = \gamma_{max}\)</span> reduces to <span class="math inline">\(\rho_{*s} &gt; \rho_{*s,\text{crit}}\)</span>, in which <span class="math inline">\(\rho_{*s,\text{crit}}\)</span> depends on the scaling of <span class="math inline">\(\gamma_{max}\)</span></p></li>
+<li><p>If one balances <span class="math inline">\(\omega_s\)</span> from Eq. (2.34) using <span class="math inline">\(E_r\)</span> derived from the <span class="math inline">\(p^\prime\)</span> contribution in Eq. (2.38), then the criterion <span class="math inline">\(\omega_s = \gamma_{max}\)</span> reduces to <span class="math inline">\(\rho_{*s} &gt; \rho_{*s,\text{crit}}\)</span>, in which <span class="math inline">\(\rho_{*s,\text{crit}}\)</span> depends on the scaling of <span class="math inline">\(\gamma_{max}\)</span>.</p></li>
+</ul>
+<h3 id="bifurcations">2.5 <em>Bifurcations</em></h3>
+<ul>
+<li><p>Bifurcations can take place when the equation has multi-valued or non-monotonic solutions as a function of an 'order' variable, such as density or temperature.</p>
+<ul>
+<li>Multi-valued solutions cause 'hard' bifurcations. When the solution is merely non-monotonic, it is a 'soft bif., also known as a 'first-order phase transition.' When the solution remains monotonic but undergoes a change in slope, it is called a 'second-order phase transition.'</li>
+</ul></li>
+<li><p>The poloidal torque balance has the potential to lead to a bif. in poloidal flow, and therefore <span class="math inline">\(E_r\)</span>.</p>
+<ul>
+<li>The following section of the paper covers this in significant detail. This includes that the particle flux has a nonlinear dependence on the radial electric field.</li>
+</ul></li>
+<li><p>The simplest models for the bif. physics are local in radius, but one can introduce effects to determine the radial structure of the bif. layer.</p>
+<ul>
+<li><p>A small discussion follows on determining the bif. layer width <span class="math inline">\(\Delta\)</span>.</p>
+<ul>
+<li><p>If the bif. in <span class="math inline">\(E_r\)</span> arises from <span class="math inline">\(V_\theta\)</span>, it could be that the poloidal gyroradius and viscosity determine it.</p></li>
+<li><p>However, it could be set by transport equations for density and temperature, whose gradients drive <span class="math inline">\(E_r\)</span>. (READ)</p></li>
+</ul></li>
+</ul></li>
 </ul>
 <hr />
 <h2 id="instabilities-and-turbulence-at-the-plasma-edge">3. Instabilities and Turbulence at the Plasma Edge</h2>
+<ul>
+<li>In this section, some cases where the reduction in transport fluxes resulting from a self-consistent generation of sheared flows will be noted.</li>
+</ul>
+<h3 id="edge-region-of-the-core">3.1 <em>Edge Region of the Core</em></h3>
+<h4 id="ideal-mhd-modes">3.1.1 <em>Ideal MHD Modes</em></h4>
+<ul>
+<li><p>Bishop [77] proposes ideal MHD ballooning mode stability has a role in L-H transitions.</p>
+<ul>
+<li><p>He concludes that stability properties become progressively better in a separatrix configuration in which the X-point position moves into the region of favorable curvature and that a finite edge current allows the possibility of complete stability to both ballooning and interchange modes for surfaces close to the separatrix.</p></li>
+<li>This is due partly because regions of zero local magnetic shear are move to regions of favorable curvature.</li>
+<li><p>Suggests that the L-H transition occurs well below the simple ballooning limit, Eq. (3.1)</p></li>
+</ul></li>
+<li><p>Edge plasma current can also drive instabilities (DUH). The peeling mode occurs when a resonant surface for an ideal external kink mode lies just outside the plasma surface. In cylindrical geometry, this mode is destabilized by a finite plasma current at the edge.</p>
+<ul>
+<li><p>These (mentioned in the paper) properties suggest that L-mode is considered to be unstable to the peeling mode, resulting in a high level of magnetic fluctuations at the tokamak edge and therefore an enhanced thermal diffusivity.</p></li>
+<li><p>As heating is increase, <span class="math inline">\(\alpha\)</span>, a parameter, will rise and eventually pass beyond the critical value required for stability; the peeling mode will then switch off and the edge confinement will improve, which can be interpreted as necessary for H-mode.</p></li>
+<li><p>Whether the peeling mode is stabilized as power increases depends on the competition between the rise in <span class="math inline">\(\alpha\)</span> and the rise in temperature, providing a possible explanation in L-H transitions between large and small tokamaks.</p></li>
+<li><p>(Look into context) (iv) H-mode can be accessed by reducing the edge current by current ramp-down and by pellet injection (decreases edge temperature, which increases resistivity).</p></li>
+</ul></li>
+</ul>
+<h4 id="resistive-ballooning-modes">3.1.2 <em>Resistive Ballooning Modes</em></h4>
+<ul>
+<li><em>Skipped, for now</em></li>
+</ul>
+<h4 id="tearing-modes">3.1.3 <em>Tearing Modes</em></h4>
+<ul>
+<li><em>Skipped, for now</em></li>
+</ul>
+<h4 id="drift-waves">3.1.4 <em>Drift Waves</em></h4>
+<ul>
+<li><em>Skipped, for now</em></li>
+</ul>
+<h3 id="scrape-off-layer-region">3.2 <em>Scrape-off Layer Region</em></h3>
+<h4 id="resistive-interchagees">3.2.1 <em>Resistive Interchagees</em></h4>
+<ul>
+<li><em>Skipped, for now</em></li>
+</ul>
+<h4 id="electron-temperature-gradient-modes">3.2.2 <em>Electron Temperature Gradient Modes</em></h4>
+<ul>
+<li><em>Skipped, for now</em></li>
+</ul>
+<h4 id="drift-waves-1">3.2.3 <em>Drift Waves</em></h4>
+<ul>
+<li><em>Skipped, for now</em></li>
+</ul>
 <hr />
 <h2 id="models-involving-sheared-radial-electric-field-and-flows">4. Models Involving Sheared Radial Electric Field and Flows</h2>
+<ul>
+<li><p>It is possible to classify the models by sheared radial electric fields according to the processes generating it: poloidal flow drives and damping, toroidal flows, and transport processes.</p></li>
+<li><p>In addition, one can separate the models according to whether or not they treat the evolution of gradients and fluctuations on the same footing.</p></li>
+</ul>
+<h3 id="poloidal-torque-balance">4.1 <em>Poloidal Torque Balance</em></h3>
+<ul>
+<li>Balance of torques driven by radial currents against poloidal viscosity or damping.</li>
+</ul>
+<h4 id="ion-orbit-loss-theories">4.1.1 <em>Ion-Orbit Loss Theories</em></h4>
+<ul>
+<li>Earliest model that predicts a bif. in <span class="math inline">\(E_r\)</span>, due to Itoh and Itoh.</li>
+</ul>
+<h4 id="the-effects-of-neutral-particles">4.1.2 <em>The Effects of Neutral Particles</em></h4>
+<h4 id="stringer-spin-up">4.1.3 <em>Stringer Spin-up</em></h4>
+<h4 id="neoclassical-flows">4.1.4 <em>Neoclassical Flows</em></h4>
+<h4 id="turbulent-reynolds-stress-and-viscosity">4.1.5 <em>Turbulent Reynolds Stress and Viscosity</em></h4>
+<h3 id="transport-bifurcation-theories">4.2 <em>Transport Bifurcation Theories</em></h3>
+<h3 id="phase-transition-models">4.3 <em>Phase-Transition Models</em></h3>
 <hr />
 <h2 id="other-theories-for-the-l-h-transition">5. Other Theories for the L-H Transition</h2>
 <hr />
